# ipc

./: CMakeLists.txt  README.md  client.cc  common.h  main.cc  server.cc  shared.h  shm_client.h  shm_server.h
libs/: shared.h  shm_client.h  shm_server.h  shm_types.h
simple/: CMakeLists.txt  client.cc  common.h
